@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2021 the original author or authors.
+ * Copyright 2015-2022 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -37,29 +37,32 @@ import platform.tooling.support.ThirdPartyJars;
  */
 class ModularUserGuideTests {
 
-	private static final List<String> DOCUMENTATION_MODULE_DESCRIPTOR = List.of( //
-		"open module documentation {", //
-		"  exports example.testkit;", // just here to ensure documentation example sources are compiled
-		//
-		"  requires org.junit.jupiter.api;", //
-		"  requires org.junit.jupiter.migrationsupport;", //
-		"  requires org.junit.jupiter.params;", //
-		//
-		"  requires org.junit.platform.engine;", //
-		"  requires org.junit.platform.reporting;", //
-		"  requires org.junit.platform.runner;", //
-		"  requires org.junit.platform.testkit;", //
-		//
-		"  requires java.desktop;", //
-		"  requires java.logging;", //
-		"  requires java.scripting;", //
-		"}", //
-		"" //
-	);
+	private static final String DOCUMENTATION_MODULE_DESCRIPTOR = """
+			open module documentation {
+			  exports example.testkit; // just here to ensure documentation example sources are compiled
+
+			  requires org.junit.jupiter.api;
+			  requires org.junit.jupiter.migrationsupport;
+			  requires org.junit.jupiter.params;
+
+			  requires org.junit.platform.engine;
+			  requires org.junit.platform.reporting;
+			  requires org.junit.platform.runner;
+			  requires org.junit.platform.testkit;
+
+			  requires java.desktop;
+			  requires java.logging;
+			  requires java.scripting;
+			  requires jdk.httpserver;
+
+			  provides org.junit.platform.launcher.LauncherSessionListener
+			    with example.session.GlobalSetupTeardownListener;
+			}
+			""";
 
 	private static List<String> compile(Path temp, Writer out, Writer err) throws Exception {
 		var documentation = Files.createDirectories(temp.resolve("src/documentation"));
-		Files.write(documentation.resolve("module-info.java"), DOCUMENTATION_MODULE_DESCRIPTOR);
+		Files.writeString(documentation.resolve("module-info.java"), DOCUMENTATION_MODULE_DESCRIPTOR);
 
 		var args = new ArrayList<String>();
 		args.add("-Xlint"); // enable all default warnings
@@ -135,6 +138,9 @@ class ModularUserGuideTests {
 
 		command.add("--scan-modules");
 
+		command.add("--config");
+		command.add("enableHttpServer=true");
+
 		command.add("--fail-if-no-tests");
 		command.add("--include-classname");
 		command.add(".*Tests");
@@ -166,7 +172,7 @@ class ModularUserGuideTests {
 		var args = compile(temp, out, err);
 		// args.forEach(System.out::println);
 
-		assertTrue(err.toString().isBlank(), () -> err.toString() + "\n\n" + String.join("\n", args));
+		assertTrue(err.toString().isBlank(), () -> err + "\n\n" + String.join("\n", args));
 		var listing = Helper.treeWalk(temp);
 		assertLinesMatch(List.of( //
 			"destination", //
